--- a/jollix/CD/isolinux/isolinux.cfg
+++ b/jollix/CD/isolinux/isolinux.cfg
@@ -1,13 +1,20 @@
-default jollix 
+default jollix
 append initrd=initrd root=/dev/ram0 init=/linuxrc 
 
 timeout 300
 prompt 1
 display boot.msg
 F1 boot.msg
-F2 help.msg 
+F2 f2.msg 
+F3 f3.msg
 
 label livecd
+	kernel livecd
+	append initrd=miniroot.gz root=/dev/ram0 init=/linuxrc
+
+label jollix
 	kernel jollix
 	append initrd=initrd root=/dev/ram0 init=/linuxrc
 
+label local
+	localboot 0x80
