--- a/jollix/CD/isolinux/isolinux.cfg
+++ b/jollix/CD/isolinux/isolinux.cfg
@@ -8,11 +8,11 @@ F1 boot.msg
 F2 f2.msg 
 F3 f3.msg
 
-label livecd
-	kernel livecd
-	append initrd=miniroot.gz root=/dev/ram0 init=/linuxrc
-
 label jollix
+	kernel jollix
+	append initrd=initrd root=/dev/ram0 init=/linuxrc 
+
+label install
 	kernel jollix
 	append initrd=initrd root=/dev/ram0 init=/linuxrc
 
