--- a/jollix/CD/isolinux/isolinux.cfg
+++ b/jollix/CD/isolinux/isolinux.cfg
@@ -1,5 +1,5 @@
 default jollix
-append initrd=initrd root=/dev/ram0 init=/linuxrc 
+append splash=silent initrd=initrd root=/dev/ram0 init=/linuxrc 
 
 timeout 300
 prompt 1
@@ -10,7 +10,11 @@ F3 f3.msg
 
 label jollix
 	kernel jollix
-	append initrd=initrd root=/dev/ram0 init=/linuxrc 
+	append splash=silent vga=791 initrd=initrd root=/dev/ram0 init=/linuxrc
+
+label jollix-wfb
+	kernel jollix
+	append initrd=initrd root=/dev/ram0 init=/linuxrc
 
 label install
 	kernel jollix
